# i3-focus-last

./: Cargo.toml  LICENSE  README.md
i3-focus-last/: Cargo.toml
i3-focus-last/src/: lib.rs  main.rs
i3-focus-last/src/ipc/: server.rs
rofi-window-i3/: Cargo.toml  build.rs
rofi-window-i3/src/: lib.rs  rofi.rs  wrapper.h
src/: lib.rs  main.rs
src/ipc/: client.rs  mod.rs  server.rs
