[package]
name = "i3-focus-last"
version = "0.5.4"
authors = ["lbonn"]
description = "Focus last window on i3"
license = "MIT"
repository = "https://github.com/lbonn/i3-focus-last"
edition = "2021"

[dependencies]
gumdrop = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
swayipc = "3"

[workspace]
members = [ ".", "rofi-window-i3" ]
resolver = "2"
